ExplorerMode.css
body{
  text-align: center;
  font-family: Florence;
  display: none;
}
.introduction{
  display: none;
  margin: auto, auto, auto, auto;
  font-size: 70%;
  background-color: black;
  color: white;
}
.continue{
  display: none;
}
.coward{
  visibility: none;
}
.startup{
  font-size: 70%;
}

